--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,9 @@
 /* variables */
 :root {
     --primary-color: #222;
+    --text-color: #1a1a1a;
+    --text-color-hover: #088178;
+    --background-color: #e3e6f3;
    
 }
 
@@ -64,4 +67,51 @@ p {
 }
  body {
     width: 100%;
+ }
+
+ /* Header Start */
+ #header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 80px;
+    background-color: var(--background-color);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+
+ }
+
+ #navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ #navbar li {
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+
+ }
+
+ #navbar li a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-color);
+ }
+
+ #navbar li a:hover,
+ #navbar li a.active {
+    color: var(--text-color-hover);
+    transition: 0.3s ease;
+ }
+
+ #navbar li a.active::after, #navbar li a:hover::after {
+    content: "";
+    width: 30%;
+    height: 2px;
+    background-color: var(--text-color-hover);
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
  }
