--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,16 @@
 :root {
     --primary-color: #222;
     --secondary-color: #088178;
+    --feature-color-1: #fddde4;
+    --feature-color-2: #d1e8f2;
+    --feature-color-3: #cdd4f8;
+    --feature-color-4: #f6dbf6;
+    --feature-color-5: #fff2e5;
+    --feature-color-6: #cdebbc;
     --text-color: #1a1a1a;
     --text-color-hover: var(--secondary-color);
     --background-color: #e3e6f3;
+    --border-color: #cce7d0;
    
 }
 
@@ -156,6 +163,66 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
-    transition: 0.3s ease;
 }
+
+
+/* Feature section */
+
+#feature {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box {
+    width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  margin: 15px 0;
+}
+
+#feature .fe-box:hover {
+   box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+   transform: translateY(-10px);
+   transition: 0.3s ease;
+   cursor: pointer;
+}
+
+#feature .fe-box img {
+  width: 100%;
+  margin-bottom: 10px;
+
+
+}
+
+#feature .fe-box h6 {
+    display: inline-block;
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  border-radius: 4px;
+  color: var(--secondary-color);
+  background-color: var(--feature-color-1);
+}
+
+#feature .fe-box:nth-child(2) h6 {
+    background-color: var(--feature-color-2);
+}
+#feature .fe-box:nth-child(3) h6 {
+    background-color: var(--feature-color-3);
+}
+#feature .fe-box:nth-child(4) h6 {
+    background-color: var(--feature-color-4);
+}
+#feature .fe-box:nth-child(5) h6 {
+    background-color: var(--feature-color-5);
+}
+#feature .fe-box:nth-child(6) h6 {
+    background-color: var(--feature-color-6);
+}
+
+
 
