--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-
 /* variables */
 :root {
-    --primary-color: #222;
-    --secondary-color: #088178;
-    --feature-color-1: #fddde4;
-    --feature-color-2: #d1e8f2;
-    --feature-color-3: #cdd4f8;
-    --feature-color-4: #f6dbf6;
-    --feature-color-5: #fff2e5;
-    --feature-color-6: #cdebbc;
-    --text-color: #1a1a1a;
-    --text-color-hover: var(--secondary-color);
-    --background-color: #e3e6f3;
-    --border-color: #cce7d0;
-   
+  --primary-color: #222;
+  --secondary-color: #088178;
+  --feature-color-1: #fddde4;
+  --feature-color-2: #d1e8f2;
+  --feature-color-3: #cdd4f8;
+  --feature-color-4: #f6dbf6;
+  --feature-color-5: #fff2e5;
+  --feature-color-6: #cdebbc;
+  --text-color: #1a1a1a;
+  --text-color-gray: #606063;
+  --text-color-hover: var(--secondary-color);
+  --background-color: #e3e6f3;
+  --border-color: #cce7d0;
+  --star-color: #ffd200;
 }
-
-
 
 * {
   margin: 0;
@@ -27,156 +25,151 @@
   font-family: "Spartan", sans-serif;
 }
 
-
 h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: var(--primary-color);
+  font-size: 50px;
+  line-height: 64px;
+  color: var(--primary-color);
 }
 
 h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: var(--primary-color);
+  font-size: 46px;
+  line-height: 54px;
+  color: var(--primary-color);
 }
 
 h3 {
-    font-size: 26px;
-    line-height: 32px;
+  font-size: 26px;
+  line-height: 32px;
 }
 
 h4 {
-    font-size: 20px;
-    color: #222;
-
+  font-size: 20px;
+  color: #222;
 }
 
 h5 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 h6 {
-    font-size: 12px;
-    font-weight: 700;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 p {
-    font-size: 16px;
-    color: #465b42;
-    margin: 15px 0 20px 0;
+  font-size: 16px;
+  color: #465b42;
+  margin: 15px 0 20px 0;
 }
 
 .section-p1 {
-    padding: 40px 80px;    
+  padding: 40px 80px;
 }
 
 .section-M1 {
-    padding: 40px 0;
+  padding: 40px 0;
 }
- body {
-    width: 100%;
- }
+body {
+  width: 100%;
+}
 
- /* Header Start */
- #header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 80px;
-    background-color: var(--background-color);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
+/* Header Start */
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px;
+  background-color: var(--background-color);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
 
- }
+#navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- #navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
+}
 
- #navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
+#navbar li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--text-color);
+}
 
- }
+#navbar li a:hover,
+#navbar li a.active {
+  color: var(--text-color-hover);
+  transition: 0.3s ease;
+}
 
- #navbar li a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: var(--text-color);
- }
+#navbar li a.active::after,
+#navbar li a:hover::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background-color: var(--text-color-hover);
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
+}
 
- #navbar li a:hover,
- #navbar li a.active {
-    color: var(--text-color-hover);
-    transition: 0.3s ease;
- }
-
- #navbar li a.active::after, #navbar li a:hover::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background-color: var(--text-color-hover);
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
- }
-
- /* Home page  */
- #hero {
-    background-image: url("../img/hero4.png");
-    height: 90vh;
-    width: 100%;
-    background-position: top 25% right 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 0 80px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    
- }
+/* Home page  */
+#hero {
+  background-image: url("../img/hero4.png");
+  height: 90vh;
+  width: 100%;
+  background-position: top 25% right 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
 
 #hero h4 {
- padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 #hero h1 {
- color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 
-#hero button{
-    background-image: url("../img/button.png");
-    background-color: transparent;
-    color: var(--secondary-color);
-    font-weight: 700;
-    font-size: 15px;
-    border: 0;
-    padding: 14px 80px 14px 65px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
+#hero button {
+  background-image: url("../img/button.png");
+  background-color: transparent;
+  color: var(--secondary-color);
+  font-weight: 700;
+  font-size: 15px;
+  border: 0;
+  padding: 14px 80px 14px 65px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
-
 
 /* Feature section */
 
 #feature {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 #feature .fe-box {
-    width: 180px;
+  width: 180px;
   text-align: center;
   padding: 25px 15px;
   box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
@@ -186,21 +179,19 @@ p {
 }
 
 #feature .fe-box:hover {
-   box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
-   transform: translateY(-10px);
-   transition: 0.3s ease;
-   cursor: pointer;
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+  transform: translateY(-10px);
+  transition: 0.3s ease;
+  cursor: pointer;
 }
 
 #feature .fe-box img {
   width: 100%;
   margin-bottom: 10px;
-
-
 }
 
 #feature .fe-box h6 {
-    display: inline-block;
+  display: inline-block;
   padding: 9px 8px 6px 8px;
   line-height: 1;
   border-radius: 4px;
@@ -209,20 +200,92 @@ p {
 }
 
 #feature .fe-box:nth-child(2) h6 {
-    background-color: var(--feature-color-2);
+  background-color: var(--feature-color-2);
 }
 #feature .fe-box:nth-child(3) h6 {
-    background-color: var(--feature-color-3);
+  background-color: var(--feature-color-3);
 }
 #feature .fe-box:nth-child(4) h6 {
-    background-color: var(--feature-color-4);
+  background-color: var(--feature-color-4);
 }
 #feature .fe-box:nth-child(5) h6 {
-    background-color: var(--feature-color-5);
+  background-color: var(--feature-color-5);
 }
 #feature .fe-box:nth-child(6) h6 {
-    background-color: var(--feature-color-6);
+  background-color: var(--feature-color-6);
 }
 
+#product1 {
+  text-align: center;
+}
+#product1 .pro-container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
 
+#product1 .pro {
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid var(--border-color);
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+  margin: 15px 0;
+  transition: 0.2s ease;
+  position: relative;
+}
+
+#product1 .pro:hover {
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+  transform: translateY(-10px);
+}
+
+#product1 .pro img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+#product1 .pro .des {
+  padding: 10px 0;
+  text-align: start;
+}
+#product1 .pro .des span {
+  color: var(--text-color-gray);
+  font-size: 12px;
+}
+
+#product1 .pro .des h5 {
+  padding-top: 10px;
+  color: var(--text-color);
+  font-size: 14px;
+}
+
+#product1 .pro .des i {
+  color: var(--star-color);
+  font-size: 12px;
+}
+
+#product1 .pro .des h4 {
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+  color: var(--secondary-color);
+}
+
+#product1 .pro .cart {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: var(--background-color);
+    color: var(--secondary-color);
+    font-weight: 500;
+    border: 1px solid var(--border-color);
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
 
