--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,8 @@
   --feature-color-6: #cdebbc;
   --text-color: #1a1a1a;
   --text-color-gray: #606063;
+  --text-color-white: #fff;
+  --text-color-red: #ef363e;
   --text-color-hover: var(--secondary-color);
   --background-color: #e3e6f3;
   --border-color: #cce7d0;
@@ -66,9 +68,34 @@ p {
   padding: 40px 80px;
 }
 
-.section-M1 {
+.section-m1 {
   padding: 40px 0;
 }
+
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: var(--text-color);
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 16px;
+    color: var(--text-color-white);
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid var(--text-color-white);
+    outline: none;
+    transition: 0.3s ease;
+}
+
+
 body {
   width: 100%;
 }
@@ -287,5 +314,119 @@ body {
     position: absolute;
     bottom: 20px;
     right: 10px;
+}
+
+#banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("../img/banner/b2.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+
+#banner h4{
+    color: var(--text-color-white);
+    font-size: 16px;
+}
+#banner h2{
+    color: var(--text-color-white);
+    font-size: 30px;
+    padding: 10px 0;
+}
+#banner h2 span{
+    color: var(--text-color-red);
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner button:hover{
+    background-color: var(--secondary-color);
+    color: var(--text-color-white);
+    transition: 0.2s ease;
+}
+
+#sm-banner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#sm-banner .banner-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("../img/banner/b17.jpg");
+  min-width: 700px;
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+#sm-banner .banner-box2{
+  background-image: url("../img/banner/b10.jpg");
+}
+
+#sm-banner h4{
+  color: var(--text-color-white);
+  font-size: 28px;
+  font-weight: 800;
+}
+#sm-banner span{
+  color: var(--text-color-white);
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    transition: 0.2s ease;
+}
+#banner3{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 80px;
+}
+
+#banner3 .banner-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("../img/banner/b7.jpg");
+  min-width: 30%;
+  height: 30vh;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+  margin-bottom: 30px;
+}
+
+#banner3 .banner-box2{
+  background-image: url("../img/banner/b4.jpg");
+}
+
+#banner3 .banner-box3{
+  background-image: url("../img/banner/b18.jpg");
+}
+
+#banner3 h2{
+    color: var(--text-color-white);
+    font-size: 22px;
+    font-weight: 900;
+}
+#banner3 h3{
+    color: var(--text-color-red);
+    font-size: 15px;
+    font-weight: 800;
 }
 
