--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -484,4 +484,63 @@ body {
   border-bottom-left-radius: 0;
 }
 
+footer{
+    padding: 40px 80px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;    
+}
+
+footer .col{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+margin-bottom: 20px;
+}
+
+footer .logo{
+    margin-bottom: 30px;
+}
+
+footer h4{
+  font-size: 14px;
+  padding-bottom: 20px;
+
+}
+footer p{
+  font-size: 13px;
+  margin: 0 0 8px 0;  
+}
+
+footer a{
+  font-size: 13px;
+  text-decoration: none;
+  color: var(--text-color);
+  margin-bottom: 10px;  
+
+}
+
+footer .follow{
+  color: var(--text-color-gray);
+  padding-top: 4px;
+  cursor: pointer;
+}
+
+footer .install .row img{
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+}
+footer .install img{
+  margin: 10px 0 15px 0;
+}
+
+footer .follow i:hover, footer a:hover{
+  color: var(--secondary-color);
+  transition: all 0.3s ease;
+}
+
+footer .copyright{
+  width: 100%;
+  text-align: center;
+}
 
