--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -570,6 +570,24 @@ footer .copyright {
   text-align: center;
 }
 
+/* Shop Page  */
+
+#page-header {
+  background-image: url("../img/banner/b1.jpg");
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 14px;
+}
+
+#page-header h2, #page-header p {
+  color: var(--text-color-white);
+}
+
 /* start media query */
 
 @media (max-width: 799px) {
