--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -679,6 +679,77 @@ footer .copyright {
   line-height: 25px;
 }
 
+/* blog  */
+
+#page-header.blog-header {
+  background-image: url("../img/banner/b19.jpg");
+}
+
+#blog {
+  padding: 150px 150px 0 150px;
+}
+
+#blog .blog-box {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  padding-bottom: 90px;
+}
+
+#blog .blog-img {
+  width: 50%;
+  margin-right: 40px;
+}
+#blog img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+ 
+}
+#blog .blog-details {
+  width: 50%;
+}
+
+#blog .blog-details a {
+  text-decoration: none;
+  font-size: 11px;
+  color: var(--text-color);
+  font-weight: 700;
+  position: relative;
+  text-transform: uppercase;
+}
+
+#blog .blog-details a::after {
+  content: "";
+  width: 50px;
+  height: 1px;
+  background-color: var(--text-color);
+  position: absolute;
+  top: 4px;
+  right: -60px;
+}
+
+#blog .blog-details a:hover {
+  color: var(--secondary-color);
+  transition: all 0.3s ease;
+}
+
+#blog .blog-details a:hover::after {
+  background-color: var(--secondary-color);
+  transition: all 0.3s ease;
+}
+
+#blog .blog-box h1 {
+  position: absolute;
+  top: -48px;
+  left: 0;
+  font-size: 70px;
+  font-weight: 700;
+  color: var(--text-color-gray);
+  z-index: -9;
+}
+
 /* start media query */
 
 @media (max-width: 799px) {
@@ -774,16 +845,18 @@ footer .copyright {
     width: 100%;
   }
 
+   
+
   /* end media query */
 }
 
 @media (max-width: 470px) {
   #header {
-    padding: 10px 20px; 
+    padding: 10px 20px;
   }
 
   /* set header in bottom*/
-/* 
+  /* 
   #header {
     padding: 10px 20px;
     position:fixed;
@@ -885,4 +958,31 @@ footer .copyright {
   #page-header h2 {
     font-size: 26px;
   }
+
+  /* Blog Page */
+  #blog {
+    padding: 100px 20px 0 20px;
+  }
+  #blog .blog-box {
+    flex-direction: column;
+    align-items: flex-start;
+   
+  }
+
+  #blog .blog-img{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  #blog .blog-box h1{
+    font-size: 35px;
+    top: -40px;
+    left: 0;
+  }
+
+  #blog .blog-details {
+    width: 100%;
+}
+
+
 }
