--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -705,7 +705,6 @@ footer .copyright {
   width: 100%;
   height: 300px;
   object-fit: cover;
- 
 }
 #blog .blog-details {
   width: 50%;
@@ -748,6 +747,40 @@ footer .copyright {
   font-weight: 700;
   color: var(--text-color-gray);
   z-index: -9;
+}
+
+/* About page  */
+#about-head {
+  display: flex;
+  align-items: center;
+}
+#page-header.about-header {
+  background-image: url("../img/about/banner.png");
+}
+
+#about-head img {
+  width: 50%;
+  height: auto;
+}
+
+#about-head div {
+  padding-left: 40px;
+}
+
+#about-app {
+  text-align: center;
+}
+
+#about-app .video {
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0px auto;
+}
+
+#about-app video {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
 /* start media query */
@@ -844,8 +877,6 @@ footer .copyright {
   #newsletter .form {
     width: 100%;
   }
-
-   
 
   /* end media query */
 }
@@ -966,15 +997,14 @@ footer .copyright {
   #blog .blog-box {
     flex-direction: column;
     align-items: flex-start;
-   
   }
 
-  #blog .blog-img{
+  #blog .blog-img {
     width: 100%;
     margin-bottom: 30px;
   }
 
-  #blog .blog-box h1{
+  #blog .blog-box h1 {
     font-size: 35px;
     top: -40px;
     left: 0;
@@ -982,7 +1012,33 @@ footer .copyright {
 
   #blog .blog-details {
     width: 100%;
+  }
+
+  /* About page */
+
+  #about-head {
+    flex-direction: column;
+  }
+
+  #about-head img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  #about-head h2 {
+    font-size: 26px;
+  }
+
+  #about-head div {
+    padding-left: 0px;
+  }
+
+  #about-app .video {
+    width: 100%;
+  }
+
+  #about-app h2 {
+    font-size: 26px;
+   
 }
-
-
 }
